add love gif and link preview image

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A website dedicated to the love of my life"
+      content="This is dedicated to a very special someone."
     />
+    <meta property="og:image" content="%PUBLIC_URL%/og_image.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
